[package]
name = "msg_bus"
version = "0.0.2"
authors = ["ZGQ <2175318066@qq.com>"]
edition = "2018"
description = "message bus "
license = "MIT"
readme = "README.md"
keywords = ["NAT", "reverse", "proxy"]
categories = ["git"]

[dependencies]
async-std={ version = "1.7.0", features = ["attributes", "unstable"]}
async-trait = "0.1.42"
stop-token = "0.1.2"
futures-timer = "3.0.2"
futures = "0.3.8"
log = "0.4"

[[example]]
name = "sync"
path = "examples/sync.rs"
